--- a/config.json.dist
+++ b/config.json.dist
@@ -1,9 +1,7 @@
 {
+  "Firebase_url": "",
   "Read_user": "",
   "Read_password": "",
   "Read_database": "",
-  "Write_user": "",
-  "Write_password": "",
-  "Write_database": ""
-  "Write_protocol_host_port": ""
+  "Read_protocol_host_port": ""
 }
