--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@ DD_AGENT_HOST=''
 DD_SERVICE='trends.example.org'
 DD_VERSION='__VERSION__'
 DEBUG=
-LIST_NAME=''
+LIST_ID=''
 WORKER='trends.example.org'
 WORKER_UID=1000
 WORKER_GID=101
