--- a/.env.dist
+++ b/.env.dist
@@ -7,5 +7,5 @@ DD_VERSION='__VERSION__'
 DEBUG=
 LIST_ID=''
 WORKER='trends.example.org'
-WORKER_UID=1000
-WORKER_GID=101
+WORKER_OWNER_UID=1000
+WORKER_OWNER_GID=101
